[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scenes/game/ui/game_ui.gd" id="1_itnml"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2clh6"]
bg_color = Color(0.0588235, 0.364706, 0.670588, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6p1xf"]
bg_color = Color(0.0392157, 0.243137, 0.447059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5ohm"]
bg_color = Color(0.0196078, 0.121569, 0.223529, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38hc4"]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0588235, 0.364706, 0.670588, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q18dw"]
bg_color = Color(0.156863, 0.156863, 0.156863, 0.941176)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.156863, 0.698039, 0.313726, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_itnml")

[node name="ModeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Play Solution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="ActionButtons"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2clh6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6p1xf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g5ohm")
theme_override_styles/disabled = SubResource("StyleBoxFlat_g5ohm")
disabled = true
text = "Play"

[node name="SkipButton" type="Button" parent="ActionButtons"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2clh6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6p1xf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g5ohm")
theme_override_styles/disabled = SubResource("StyleBoxFlat_g5ohm")
text = "Skip"

[node name="DeclareButton" type="Button" parent="ActionButtons"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2clh6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6p1xf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g5ohm")
theme_override_styles/disabled = SubResource("StyleBoxFlat_g5ohm")
disabled = true
text = "Declare"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_2clh6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6p1xf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g5ohm")
text = "Menu"

[node name="MessagePopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_38hc4")

[node name="VBoxContainer" type="VBoxContainer" parent="MessagePopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MessageLabel" type="Label" parent="MessagePopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "This is a message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="OkButton" type="Button" parent="MessagePopup/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_2clh6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6p1xf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g5ohm")
text = "OK"

[node name="MessageTimer" type="Timer" parent="MessagePopup"]
wait_time = 2.0
one_shot = true

[node name="ConfirmPopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_38hc4")

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="ConfirmPopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Return to Main Menu?"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="ConfirmPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Are you sure you want to return to the main menu? The current game will be lost."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="ConfirmPopup/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="YesButton" type="Button" parent="ConfirmPopup/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2clh6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6p1xf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g5ohm")
text = "Yes"

[node name="NoButton" type="Button" parent="ConfirmPopup/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2clh6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6p1xf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g5ohm")
text = "No"

[node name="ScoresPopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q18dw")

[node name="VBoxContainer" type="VBoxContainer" parent="ScoresPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="ScoresPopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Round Ended!"
horizontal_alignment = 1

[node name="ScoresLabel" type="Label" parent="ScoresPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Round Scores:

Player 1: 5 points
Player 2: 3 points
Player 3: 2 points
Player 4: 1 points"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ContinueButton" type="Button" parent="ScoresPopup/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2clh6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6p1xf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g5ohm")
text = "Continue"

[node name="GameOverPopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q18dw")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TitleLabel" type="Label" parent="GameOverPopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Game Over!"
horizontal_alignment = 1

[node name="ChampionLabel" type="Label" parent="GameOverPopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Player 1 is the CHAMPION!"
horizontal_alignment = 1

[node name="FinalScoresLabel" type="Label" parent="GameOverPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Final Scores:

Player 1: 15 points
Player 2: 10 points
Player 3: 7 points
Player 4: 5 points"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MainMenuButton" type="Button" parent="GameOverPopup/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_2clh6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6p1xf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g5ohm")
text = "Main Menu"
